--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,40 +8,55 @@ services:
     ports:
       - "6379:6379"
 
-  developmentAPI:
+  goomerDatabase:
+    image: postgres
+    container_name: goomerDatabase
+    restart: always
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_PASSWORD: postgres
+    volumes:
+      - ./docs/DDL.sql:/docker-entrypoint-initdb.d/docker_postgres_init.sql
+
+  development:
     image: node:14
-    container_name: developmentAPI
+    container_name: goomerAPI
     working_dir: /app
     build:
       context: .
       dockerfile: Dockerfile
-      target: back_development
+      target: stage_development
     ports:
       - 3333:3333
     volumes:
       - "/app/node_modules"
-      - ./backend:/app/:rw
+      - ./:/app/:rw
     environment:
       - REDIS_HOST=host.docker.internal
       - NODE_ENV=development
+      - DATABASE_HOST=host.docker.internal
     depends_on:
-      - redis
+      - goomerRedis
+      - goomerDatabase
 
-  productionAPI:
+  production:
     image: node:14
-    container_name: productionAPI
+    container_name: goomerAPI
     working_dir: /app
     build:
       context: .
       dockerfile: Dockerfile
-      target: production
+      target: stage_production
     ports:
       - 3333:3333
     volumes:
       - "/app/node_modules"
-      - ./backend:/app/:rw
+      - ./:/app/:rw
     environment:
       - REDIS_HOST=host.docker.internal
       - NODE_ENV=production
+      - DATABASE_HOST=host.docker.internal
     depends_on:
-      - redis
+      - goomerRedis
+      - goomerDatabase
