--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-error": "^0.0.2",
+    "knex": "^0.95.6",
+    "pg": "^8.6.0",
     "redis": "^3.1.2",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
