docs(README): added how to run application

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
-REDIS_HOST=host.docker.internal
-NODE_ENV=development
+NODE_ENV=
+REDIS_HOST=
+DATABASE_NAME=
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_LOGGING=
+DATABASE_POOL_MIN=
+DATABASE_POOL_MAN=
