--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "knex": "^0.95.6",
     "pg": "^8.6.0",
     "redis": "^3.1.2",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.5.0",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "yup": "^0.32.9"
