--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,10 +41,22 @@
         "./src/interfaces/*"
       ],
       "@exceptions/*": [
-        "./src/exceptions/*"
+        "./src/core/exceptions/*"
+      ],
+      "@database/*": [
+        "./src/core/database/*"
+      ],
+      "@container/*": [
+        "./src/core/container/*"
       ],
       "@validators/*": [
         "./src/validators/*"
+      ],
+      "@repositories/*": [
+        "./src/repositories/*"
+      ],
+      "@entities/*": [
+        "./src/entities/*"
       ],
       "@mocks/*": [
         "./src/__mocks__/*"
