--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
     "@types/cors": "^2.8.10",
+    "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.4",
@@ -41,6 +42,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "date-fns": "^2.22.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-error": "^0.0.2",
