--- a/reference/job-dev-backend-interview.v1.yaml
+++ b/reference/job-dev-backend-interview.v1.yaml
@@ -66,6 +66,86 @@ paths:
             type: integer
           in: query
           name: pagesize
+    post:
+      summary: ''
+      operationId: post-restaurants
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductAndRelationships'
+              examples:
+                example-1:
+                  value:
+                    id: e3a49cd9-64bb-428c-ac93-9e0b2f6b5da8
+                    name: Gabe Panquecaria
+                    photoUrl: 'https://avatars.githubusercontent.com/u/33178519?v=4'
+                    createdAt: '2021-07-01T22:57:23.937Z'
+                    updatedAt: '2021-07-01T22:57:23.937Z'
+                    address:
+                      id: 24dd70b1-07bc-4abc-8d34-8841518b3598
+                      street: Rua Voluntários da Patria
+                      number: '371'
+                      postalCode: '18060005'
+                      neighborhood: Vila Carvalho
+                      restaurantId: e3a49cd9-64bb-428c-ac93-9e0b2f6b5da8
+                      createdAt: '2021-07-01T22:57:23.952Z'
+                      updatedAt: '2021-07-01T22:57:23.952Z'
+                    workingHours:
+                      - id: c430dce1-0d13-435a-be91-93049bf16b2d
+                        weekday: sunday
+                        startAt: '13:00:00'
+                        finishAt: '18:00:00'
+                        restaurantId: e3a49cd9-64bb-428c-ac93-9e0b2f6b5da8
+                        promotionId: null
+                        createdAt: '2021-07-01T22:57:23.969Z'
+                        updatedAt: '2021-07-01T22:57:23.969Z'
+                      - id: 80febd35-a60c-403c-93fb-5afa2322bf21
+                        weekday: saturday
+                        startAt: '19:00:00'
+                        finishAt: '23:58:00'
+                        restaurantId: e3a49cd9-64bb-428c-ac93-9e0b2f6b5da8
+                        promotionId: null
+                        createdAt: '2021-07-01T22:57:23.969Z'
+                        updatedAt: '2021-07-01T22:57:23.969Z'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HttpException'
+              examples:
+                duplicated weekday:
+                  value:
+                    status: 400
+                    message: weekday sunday is duplicated in request body
+                invalid weekday:
+                  value:
+                    status: 400
+                    message: weekday sundays does not exists
+                invalid time format:
+                  value:
+                    status: 400
+                    message: 'time format to working hour in startAt is wrong. The pattern allowed is hh:mm and between 00:00 and 23:59'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HttpException'
+              examples:
+                internal server error:
+                  value:
+                    status: 500
+                    message: Internal Server Error
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateOrUpdateProduct'
+        description: ''
   '/restaurants/{id}':
     parameters:
       - schema:
@@ -82,7 +162,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Restaurant'
+                $ref: '#/components/schemas/ProductAndRelationships'
               examples:
                 success example:
                   value:
@@ -109,6 +189,40 @@ paths:
                         finishAt: '18:00:00'
                         createdAt: '2021-07-01T06:45:45.445Z'
                         updatedAt: '2021-07-01T06:45:45.445Z'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HttpException'
+              examples:
+                required working hours:
+                  value:
+                    status: 400
+                    message: Promotion cant be created without working hours/weekdays
+                invalid json:
+                  value:
+                    status: 400
+                    message: 'Unexpected token } in JSON at position 278'
+                invalid json 2:
+                  value:
+                    status: 400
+                    message: Unexpected end of JSON input
+                required price:
+                  value:
+                    status: 400
+                    message: promotion.price is a required field
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HttpException'
+              examples:
+                internal server error:
+                  value:
+                    status: 500
+                    message: Internal Server Error
       operationId: get-restaurants-id
 components:
   schemas:
@@ -219,7 +333,6 @@ components:
       title: ProductAndRelationships
       type: object
       properties:
-        properties: {}
         id:
           type: string
         name:
@@ -274,3 +387,51 @@ components:
                     type: string
                   updatedAt:
                     type: string
+    HttpException:
+      title: HttpException
+      type: object
+      properties:
+        status:
+          type: number
+        message:
+          type: string
+    CreateOrUpdateProduct:
+      title: CreateOrUpdateProduct
+      type: object
+      properties:
+        name:
+          type: string
+        photoUrl:
+          type: string
+        price:
+          type: number
+        categoryId:
+          type: string
+        restaurantId:
+          type: string
+        promotion:
+          type: object
+          properties:
+            description:
+              type: string
+            price:
+              type: number
+            workingHours:
+              type: array
+              items:
+                type: object
+                properties:
+                  weekday:
+                    type: string
+                  startAt:
+                    type: string
+                  finishAt:
+                    type: string
+                  restaurantId:
+                    type:
+                      - string
+                      - 'null'
+                  promotionId:
+                    type:
+                      - string
+                      - 'null'
