docs(reference): fixed a unamed endpoint group

--- a/reference/job-dev-backend-interview.v1.yaml
+++ b/reference/job-dev-backend-interview.v1.yaml
@@ -350,7 +350,7 @@ paths:
         in: path
         required: true
     get:
-      summary: Your GET endpoint
+      summary: List Products
       tags: []
       responses:
         '200':
